it/snapshots/terminal__init_edit_declined.snap
---
source: it/terminal.rs
expression: session.screen()
---
┌  PV init  ·  acme
│
◇  Detected Laravel · Vite
│  Laravel: Detected composer.json, artisan, and Laravel project files
│  Vite: Detected Vite in package.json
│
◇  Selected Project resources:
│  mailpit: Detected SMTP mail env keys when selected
│  mysql: Detected DB_CONNECTION=mysql
│  redis: Detected Redis-compatible env keys when selected
│  rustfs: Detected AWS/S3 env keys when selected
│
◇  Suggested resources
│  [x] MySQL
│  [ ] Postgres
│  [x] Redis
│  [x] Mailpit
│  [x] RustFS/S3
│
◇  Use these selections?
│  Edit
│
◇  PHP track
│  8.5
│
◇  Document root
│  public
│
◇  Select Project resources
│  MySQL
│  Postgres
│  Redis
│  Mailpit
│  RustFS/S3
│
◇  MySQL track
│  latest
│
◇  MySQL allocations
│  app
│
◇  Postgres track
│  latest
│
◇  Postgres allocations
│  app
│
◇  Redis track
│  latest
│
◇  Redis allocations
│  cache
│
◇  Mailpit track
│  latest
│
◇  RustFS/S3 track
│  latest
│
◇  RustFS/S3 allocations
│  uploads
│
◇  Project config preview:
│  php: '8.5'
│  root: public
│  env:
│    APP_URL: ${url}
│    VITE_DEV_SERVER_CERT: ${tls.cert}
│    VITE_DEV_SERVER_KEY: ${tls.key}
│  mailpit:
│    version: latest
│    env:
│      MAIL_HOST: ${smtp_host}
│      MAIL_MAILER: smtp
│      MAIL_PORT: ${smtp_port}
│  mysql:
│    version: latest
│    allocations:
│      app:
│        env:
│          DB_CONNECTION: mysql
│          DB_DATABASE: ${database}
│          DB_HOST: ${host}
│          DB_PASSWORD: ${password}
│          DB_PORT: ${port}
│          DB_USERNAME: ${username}
│  postgres:
│    version: latest
│    allocations:
│      app:
│        env:
│          APP_DB_CONNECTION: pgsql
│          APP_DB_DATABASE: ${database}
│          APP_DB_HOST: ${host}
│          APP_DB_PASSWORD: ${password}
│          APP_DB_PORT: ${port}
│          APP_DB_USERNAME: ${username}
│  redis:
│    version: latest
│    allocations:
│      cache:
│        env:
│          REDIS_HOST: ${host}
│          REDIS_PORT: ${port}
│          REDIS_PREFIX: ${prefix}
│  rustfs:
│    version: latest
│    allocations:
│      uploads:
│        env:
│          AWS_ACCESS_KEY_ID: ${access_key}
│          AWS_BUCKET: ${bucket}
│          AWS_ENDPOINT: ${endpoint}
│          AWS_SECRET_ACCESS_KEY: ${secret_key}
│
◇  Write Project config?
│  No
│
└  ✗ pv init cancelled; no files changed.
