it/snapshots/terminal__init_select_active.snap
---
source: it/terminal.rs
expression: session.screen()
---
 pv  init

┌  PV init  ·  acme
│
◇  Detected Laravel · Vite
│  Laravel: Detected composer.json, artisan, and Laravel project files
│  Vite: Detected Vite in package.json
│
◇  Selected Project resources:
│  mailpit: Detected SMTP mail env keys when selected
│  mysql: Detected DB_CONNECTION=mysql
│  redis: Detected Redis-compatible env keys when selected
│  rustfs: Detected AWS/S3 env keys when selected
│
◇  Suggested resources
│  [x] MySQL
│  [ ] Postgres
│  [x] Redis
│  [x] Mailpit
│  [x] RustFS/S3
│
◆  Use these selections?
│  ● Yes  preview the config
│  ○ No  cancel
│  ○ Edit  change selections
└  ↑↓ move · enter confirm
