it/snapshots/terminal__init_text_validation_error.snap
---
source: it/terminal.rs
expression: session.screen()
---
 pv  init

┌  PV init  ·  acme
│
◇  Detected Laravel · Vite
│  Laravel: Detected composer.json, artisan, and Laravel project files
│  Vite: Detected Vite in package.json
│
◇  Selected Project resources:
│  mailpit: Detected SMTP mail env keys when selected
│  mysql: Detected DB_CONNECTION=mysql
│  redis: Detected Redis-compatible env keys when selected
│  rustfs: Detected AWS/S3 env keys when selected
│
◇  Suggested resources
│  [x] MySQL
│  [ ] Postgres
│  [x] Redis
│  [x] Mailpit
│  [x] RustFS/S3
│
◇  Use these selections?
│  Edit
│
◇  PHP track
│  8.5
│
◇  Document root
│  public
│
◇  Select Project resources
│  MySQL
│  Postgres
│  Redis
│  Mailpit
│  RustFS/S3
│
◇  MySQL track
│  latest
│
◆  MySQL allocations
│  App
└  invalid Project config allocation name `App`; start with a lowercase letter and use only a-z, 0-9, _, or -
