it/snapshots/terminal__init_yes_result.snap
---
source: it/terminal.rs
expression: session.screen()
---
✓  Wrote Project config:
   <tempdir>/acme/pv.yml
   ↳ Link this Project:  pv link
   Laravel: Detected composer.json, artisan, and Laravel project files
   Vite: Detected Vite in package.json
   Selected Project resources:
   mailpit: Detected SMTP mail env keys when selected
   mysql: Detected DB_CONNECTION=mysql
   redis: Detected Redis-compatible env keys when selected
   rustfs: Detected AWS/S3 env keys when selected
   ↳ Vite HTTPS: configure the app's Vite config to read VITE_DEV_SERVER_CERT and
     VITE_DEV_SERVER_KEY.
