it/snapshots/terminal__link_full_https_url.snap
---
source: it/terminal.rs
expression: session.screen()
---
✓  Linked https://acme.test
   <tempdir>/acme
⚠  warning: PV is not running. Start it with `pv setup`
