it/snapshots/terminal__list_grouped_report.snap
---
source: it/terminal.rs
expression: session.screen()
---
[pv] list                                                                                     v0.2.5
────────────────────────────────────────────────────────────────────────────────────────────────────

PROJECT  MODE  PHP  STATUS  RESOURCES  ENV  PATH

○  acme.test · unknown
   served · PHP default · 0 resources · env none
   <tempdir>/acme

●  1 linked · 0 warnings · 0 failed
