it/snapshots/terminal__prune_declined_with_n.snap
---
source: it/terminal.rs
expression: session.screen()
---
◇  Prune PV-owned data for Redis track 8.8?
│  No
Prune cancelled.
